--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 flask
+flask-sqlalchemy
 flask-socketio
 eventlet
+python-socketio>=5.0.0
+flask-cors
+ultralytics
+opencv-python
+numpy
+torch>=1.7.0
